--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,10 @@
 on:
-  workflow_dispatch:
   push:
-    branches: main
+    branches: 
+      - main
+      - dev
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 name: Quarto Publish
 
