Make Conda setup work with other shells

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,10 @@
 # ./envrc
 # Activate conda environment
 # as per https://linuxtut.com/en/909f9619bc8c4330d523/
-eval "$(conda shell.bash hook)"
+
+HOOK="conda shell.$(basename $SHELL) hook"
+
+eval $HOOK
 conda activate hyui
 
 # Ask direnv to load from .env to improve compatability with docker
