--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -7,9 +7,13 @@ name = "hyui-web"
 version = "0.0.1"
 dependencies = [
     "hyui-config",
+    "hyui-models",
     "dash == 2.6.2",
     "dash-bootstrap-components == 1.2.1",
     "Flask == 2.2.2",
+    "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
-    "pre-commit == 2.20.0"
+    "pandas == 1.5.0",
+    "pre-commit == 2.20.0",
+    "requests == 2.28.1"
 ]
