--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "hyui-models",
     "dash == 2.6.2",
     "dash-bootstrap-components == 1.2.1",
+    "dash-daq == 0.5.0",
     "Flask == 2.2.2",
     "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
