--- a/code/api/pyproject.toml
+++ b/code/api/pyproject.toml
@@ -6,4 +6,14 @@ build-backend = "setuptools.build_meta"
 name = "hyui-api"
 version = "0.0.1"
 dependencies = [
+    "hyui-config",
+    "hyui-models",
+    "hyui-utils",
+    "arrow == 1.2.3",
+    "fastapi[all] == 0.85.0",
+    "pandas == 1.5.0",
+    "pre-commit == 2.20.0",
+    "SQLAlchemy == 1.4.41",
+    "sqlmodel == 0.0.8",
+    "uvicorn[standard] == 0.18.3"
 ]
