--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,6 +40,10 @@ repos:
       - id: flake8
         name: flake8 - Python linting
         exclude: ^try
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.982"
+    hooks:
+      - id: mypy
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.3.1
     hooks:
