--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ python_version = 3.10
 warn_return_any = True
 warn_unused_configs = True
 # requires pip install sqlalchemy[mypy]
-plugins = sqlalchemy.ext.mypy.plugin
+#plugins = sqlalchemy.ext.mypy.plugin
 
 # Per-module options:
 
