--- a/code/api/pyproject.toml
+++ b/code/api/pyproject.toml
@@ -17,3 +17,14 @@ dependencies = [
     "sqlmodel == 0.0.8",
     "uvicorn[standard] == 0.18.3"
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1.3"
+testpaths = [
+    "src/api/tests"
+]
