--- a/code/config/pyproject.toml
+++ b/code/config/pyproject.toml
@@ -8,3 +8,14 @@ version = "0.0.1"
 dependencies = [
     "pydantic == 1.10.2"
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1.3"
+testpaths = [
+    "src/config/tests"
+]
