--- a/code/models/pyproject.toml
+++ b/code/models/pyproject.toml
@@ -9,3 +9,14 @@ dependencies = [
     "arrow == 1.2.3",
     "sqlmodel == 0.0.8"
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1"
+testpaths = [
+    "tests"
+]
