--- a/code/utils/pyproject.toml
+++ b/code/utils/pyproject.toml
@@ -7,3 +7,14 @@ name = "hyui-utils"
 version = "0.0.1"
 dependencies = [
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1.3"
+testpaths = [
+    "src/utils/tests"
+]
