--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -18,3 +18,14 @@ dependencies = [
     "pre-commit == 2.20.0",
     "requests == 2.28.1"
 ]
+
+[project.optional-dependencies]
+test = [
+  "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1.3"
+testpaths = [
+    "src/web/tests"
+]
