--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "Flask == 2.2.2",
     "Flask-Caching == 2.0.1",
     "Flask-Login == 0.6.2",
+    "gunicorn == 20.1.0",
     "pandas == 1.5.0",
     "pre-commit == 2.20.0",
     "requests == 2.28.1"
