--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
     rev: "v0.982"
     hooks:
       - id: mypy
+        additional_dependencies: ["types-requests"]
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.3.1
     hooks:
