--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
 
 [project.optional-dependencies]
 test = [
-  "pytest == 7.1.3"
+    "pytest == 7.1.3",
+    "types-requests == 2.28.11.2"
 ]
 
 [tool.pytest.ini_options]
