--- a/code/config/pyproject.toml
+++ b/code/config/pyproject.toml
@@ -14,6 +14,9 @@ test = [
   "pytest == 7.1.3"
 ]
 
+[tool.setuptools.package-data]
+"*" = ["*.db"]
+
 [tool.pytest.ini_options]
 minversion = "7.1.3"
 testpaths = [
