--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -26,6 +26,9 @@ test = [
     "types-requests == 2.28.11.2"
 ]
 
+[tool.setuptools.package-data]
+"*" = ["*.css", "*.ico", "*.js"]
+
 [tool.pytest.ini_options]
 minversion = "7.1.3"
 testpaths = [
