--- a/code/Dockerfile.api
+++ b/code/Dockerfile.api
@@ -32,15 +32,15 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH:/opt/mssql-tools/bin"
 RUN pip install --no-cache-dir -U pip
 
 COPY --chown=hyui:root ./config /app/config
-RUN pip install --no-cache-dir /app/config
+RUN pip install --no-cache-dir /app/config && rm -r /app/config
 
 COPY --chown=hyui:root ./utils /app/utils
-RUN pip install --no-cache-dir /app/utils
+RUN pip install --no-cache-dir /app/utils && rm -r /app/utils
 
 COPY --chown=hyui:root ./models /app/models
-RUN pip install --no-cache-dir /app/models
+RUN pip install --no-cache-dir /app/models && rm -r /app/models
 
 COPY --chown=hyui:root ./api /app/api
-RUN pip install --no-cache-dir /app/api
+RUN pip install --no-cache-dir /app/api && rm -r /app/api
 
 ENTRYPOINT ["uvicorn", "api.main:app", "--host", "0.0.0.0"]
