--- a/code/Dockerfile.web
+++ b/code/Dockerfile.web
@@ -21,15 +21,15 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH:/opt/mssql-tools/bin"
 RUN pip install --no-cache-dir -U pip
 
 COPY --chown=hyui:root ./config /app/config
-RUN pip install --no-cache-dir /app/config
+RUN pip install --no-cache-dir /app/config && rm -r /app/config
 
 COPY --chown=hyui:root ./utils /app/utils
-RUN pip install --no-cache-dir /app/utils
+RUN pip install --no-cache-dir /app/utils && rm -r /app/utils
 
 COPY --chown=hyui:root ./models /app/models
-RUN pip install --no-cache-dir /app/models
+RUN pip install --no-cache-dir /app/models && rm -r /app/models
 
 COPY --chown=hyui:root ./web /app/web
-RUN pip install --no-cache-dir /app/web
+RUN pip install --no-cache-dir /app/web && rm -r /app/web
 
 ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0", "web.main:server"]
