--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,4 +66,4 @@ repos:
       - id: detect-secrets
         name: detect-secrets - Detect secrets in staged code
         args: [ "--baseline", ".secrets.baseline" ]
-        exclude: .*/tests/.*|^\.cruft\.json$
+        exclude: .*/tests/.*|^\.cruft\.json|.env.example$
