--- a/code/api/pyproject.toml
+++ b/code/api/pyproject.toml
@@ -23,7 +23,7 @@ test = [
 ]
 
 [tool.setuptools.package-data]
-"*" = ["*.sql", "*.json"]
+"*" = ["*.sql", "*.json", "*.db"]
 
 [tool.pytest.ini_options]
 minversion = "7.1.3"
