--- a/code/.env.example
+++ b/code/.env.example
@@ -1,30 +1,17 @@
-ENV=dev
+HYLODE_UID=
 
-HYLODE_UID=999
+API_PORT=
 
-API_PORT=9999
-WEB_PORT=9999
+API_STAR_DSN=
+API_CABOODLE_DSN=
+API_CLARITY_DSN=
 
-HYUI_USER=
-# pragma: allowlist secret
-HYUI_PASSWORD=
-SECRET_KEY=
+API_BASEROW_URL=
+API_BASEROW_READ_WRITE_TOKEN=
 
-# Below here are environment variables that have not been vetted.
+WEB_PORT=
 
-DOCKER=True
-
-API_URL=http://api
-API_PORT=8000
-
-BASE_URL_PROD=
-BASE_URL_DEV=http://api
-BASE_URL_TEST=
-
-PORT_DOCKER_API=8000
-PORT_DOCKER_APP=8000
-
-PORT_COMMANDLINE_API=2345
-PORT_COMMANDLINE_APP=2345
-
-PORT_JUPYTER=2324
+WEB_USERNAME=
+WEB_PASSWORD=
+WEB_SECRET_KEY=
+WEB_API_URL=
