--- a/code/api/pyproject.toml
+++ b/code/api/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi[all] == 0.85.0",
     "pandas == 1.5.1",
     "pre-commit == 2.20.0",
+    "psycopg2-binary == 2.9.5",
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
     "uvicorn[standard] == 0.18.3"
