Add vim to Docker files
This is to aid debugging in production.

--- a/code/Dockerfile.api
+++ b/code/Dockerfile.api
@@ -10,7 +10,7 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
 RUN export DEBIAN_FRONTEND=noninteractive && \
     export ACCEPT_EULA=Y && \
     apt-get update && \
-    apt-get install --yes --no-install-recommends unixodbc-dev msodbcsql17 mssql-tools
+    apt-get install --yes --no-install-recommends unixodbc-dev msodbcsql17 mssql-tools vim
 
 # Clean up after building.
 RUN  apt-get autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
