--- a/code/Dockerfile.web
+++ b/code/Dockerfile.web
@@ -4,6 +4,14 @@ SHELL ["/bin/bash", "-o", "pipefail", "-e", "-u", "-x", "-c"]
 
 ARG HYLODE_UID
 
+RUN export DEBIAN_FRONTEND=noninteractive && \
+    export ACCEPT_EULA=Y && \
+    apt-get update && \
+    apt-get install --yes --no-install-recommends vim
+
+# Clean up after building.
+RUN  apt-get autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # User setup
 RUN useradd -u $HYLODE_UID -g 0 hyui
 
