--- a/code/.env.example
+++ b/code/.env.example
@@ -13,6 +13,7 @@ API_BASEROW_READ_WRITE_TOKEN=
 API_BASEROW_BEDS_TABLE_ID=
 
 API_HYCASTLE_URL=
+API_HYMIND_URL=
 
 # Web Server Configuration
 WEB_USERNAME=
