--- a/code/web/pyproject.toml
+++ b/code/web/pyproject.toml
@@ -7,7 +7,7 @@ name = "hyui-web"
 version = "0.0.1"
 dependencies = [
     "hyui-models",
-    "dash == 2.6.2",
+    "dash[diskcache] == 2.6.2",
     "dash-bootstrap-components == 1.2.1",
     "dash-daq == 0.5.0",
     "Flask == 2.2.2",
