Remove SqlAlchemy from models
This is done to allow Dash background callbacks to work and SQLAlchemy
in the form of the SQLModel package should not be a required dependency
for the web library.

--- a/code/models/pyproject.toml
+++ b/code/models/pyproject.toml
@@ -7,7 +7,7 @@ name = "hyui-models"
 version = "0.0.1"
 dependencies = [
     "arrow == 1.2.3",
-    "sqlmodel == 0.0.8"
+    "pydantic == 1.10.2",
 ]
 
 [project.optional-dependencies]
