Fix census, sitrep and electives pages (#136)
* Update documentation

* Add vim to Docker files

This is to aid debugging in production.

* Switch off echoing SQL to stdout

* Remove static variable

* Fix SitRep get_beds

* Fix BedRow model

* Temporary fix for CensusRow

Ideally we should isolate applications within the api and web libraries.
This does not do that as a quick fix to get things working.

* Wire SitRep endpoints

* Fix incorrectly named setting

* Fix conversion to Pydantic

* Wire SitRep individual predictions

* Alias model field

* Fix mock endpoint

* Add background callback

* Remove SqlAlchemy from models

This is done to allow Dash background callbacks to work and SQLAlchemy
in the form of the SQLModel package should not be a required dependency
for the web library.

* Fix dict flattening function

* Make electives work in dev

* Fix test

* Fix spelling issue

* Fix column names

* Remove unnecessary tables

--- a/code/.env.example
+++ b/code/.env.example
@@ -1,7 +1,9 @@
+# Docker Configuration
 HYLODE_UID=
-
 API_PORT=
+WEB_PORT=
 
+# API Server Configuration
 API_STAR_DSN=
 API_CABOODLE_DSN=
 API_CLARITY_DSN=
@@ -10,8 +12,10 @@ API_BASEROW_URL=
 API_BASEROW_READ_WRITE_TOKEN=
 API_BASEROW_BEDS_TABLE_ID=
 
-WEB_PORT=
+API_HYCASTLE_URL=
+API_HYMIND_URL=
 
+# Web Server Configuration
 WEB_USERNAME=
 WEB_PASSWORD=
 WEB_SECRET_KEY=
