Fix error with PWD in .env file

--- a/.env.example
+++ b/.env.example
@@ -26,27 +26,27 @@
 # see https://stackoverflow.com/a/71635629/992999
 
 # Add environment variables for the `data` directories
-# DIR_DATA=$(pwd)/src/data
+# DIR_DATA=${PWD}/src/data
 
 # Add environment variables for the `docs` directory
-DIR_DOCS=$(pwd)/docs
+DIR_DOCS=${PWD}/docs
 
 # Add environment variables for the `notebooks` directory
-DIR_NOTEBOOKS=$(pwd)/notebooks
+DIR_NOTEBOOKS=${PWD}/notebooks
 
 # Add environment variables for the `outputs` directory
-DIR_OUTPUTS=$(pwd)/src/outputs
+DIR_OUTPUTS=${PWD}/src/outputs
 
 # Add environment variables for the `src` directories
-DIR_SRC=$(pwd)/src
-DIR_SRC_UTILS=$(pwd)/src/utils
-DIR_SRC_CONFIG=$(pwd)/src/config
-DIR_SRC_API=$(pwd)/src/api
-DIR_SRC_APP=$(pwd)/src/app
-DIR_SRC_MOCK=$(pwd)/src/mock
+DIR_SRC=${PWD}/src
+DIR_SRC_UTILS=${PWD}/src/utils
+DIR_SRC_CONFIG=${PWD}/src/config
+DIR_SRC_API=${PWD}/src/api
+DIR_SRC_APP=${PWD}/src/app
+DIR_SRC_MOCK=${PWD}/src/mock
 
 # Add environment variables for the `tests` directory
-DIR_TESTS=$(pwd)/tests
+DIR_TESTS=${PWD}/tests
 
 
 # ===================================================================== #
