--- a/mypy.ini
+++ b/mypy.ini
@@ -9,11 +9,11 @@ warn_unused_configs = True
 
 # Per-module options:
 
-[mypy-mycode.foo.*]
-disallow_untyped_defs = True
-
-[mypy-mycode.bar]
-warn_return_any = False
+;[mypy-mycode.foo.*]
+;disallow_untyped_defs = True
+;
+;[mypy-mycode.bar]
+;warn_return_any = False
 
 [mypy-somelibrary]
 ignore_missing_imports = True
@@ -27,17 +27,17 @@ ignore_missing_imports = True
 [mypy-plotly.*]
 ignore_missing_imports = True
 
-[mypy-api.*]
-ignore_missing_imports = True
-
-[mypy-apps.*]
-ignore_missing_imports = True
-
-[mypy-config.*]
-ignore_missing_imports = True
-
-[mypy-mock.*]
-ignore_missing_imports = True
-
-[mypy-utils.*]
-ignore_missing_imports = True
+;[mypy-api.*]
+;ignore_missing_imports = True
+;
+;[mypy-apps.*]
+;ignore_missing_imports = True
+;
+;[mypy-config.*]
+;ignore_missing_imports = True
+;
+;[mypy-mock.*]
+;ignore_missing_imports = True
+;
+;[mypy-utils.*]
+;ignore_missing_imports = True
