Preliminary changes to add Varnish cache service

--- a/compose.yml
+++ b/compose.yml
@@ -41,6 +41,22 @@ services:
       - api
     networks:
       - hyui
+  varnish:
+    build:
+      dockerfile: docker/cache/Dockerfile
+      args:
+        <<: *build-args-common
+    environment:
+      <<: *proxy-common
+    env_file: .env
+    ports:
+      - "${CACHE_PORT}:80"
+    command: "-p default_keep=300"
+    depends_on:
+      - api
+      - web
+    networks:
+      - hyui
 
 networks:
   hyui:
