--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 HYLODE_UID=
 API_PORT=
 WEB_PORT=
+CACHE_PORT=
+HTTPD_PORT=
 
 # API Server Configuration
 API_STAR_DSN=
@@ -20,3 +22,5 @@ WEB_USERNAME=
 WEB_PASSWORD=
 WEB_SECRET_KEY=
 WEB_API_URL=
+
+VARNISH_SIZE=2G
