--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# All variables are mandatory
+
 # Docker Configuration
 HYLODE_UID=
 API_PORT=
@@ -21,3 +23,9 @@ WEB_USERNAME=
 WEB_PASSWORD=
 WEB_SECRET_KEY=
 WEB_API_URL=
+
+# Live config
+# WEB_API_URL=http://api:8000
+
+# Mock config
+WEB_API_URL=http://localhost:8200/mock
