Add echo sql parameter

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ API_HYCASTLE_URL=
 API_HYMIND_URL=
 API_TOWERMAIL_URL=
 
+API_ECHO_SQL=False
+
 # Web Server Configuration
 WEB_USERNAME=
 WEB_PASSWORD=
