--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # Docker Configuration
 HYLODE_UID=
 API_PORT=
-WEB_PORT=
+BASEROW_PORT=
 
 # API Server Configuration
 API_STAR_DSN=
@@ -31,3 +31,8 @@ WEB_API_URL=
 
 # Mock config
 WEB_API_URL=http://localhost:8200/mock
+
+# Initialisation Configuration
+INIT_BASEROW_USERNAME=hyui
+INIT_BASEROW_EMAIL=hyui@nhs.net
+INIT_BASEROW_PASSWORD=
