--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,9 +10,9 @@ dependencies = [
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
     "pandas == 1.5.1",
-    "pre-commit == 2.20.0",
     "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
+    "pydantic == 1.10.2",
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
     "uvicorn[standard] == 0.18.3"
@@ -20,7 +20,8 @@ dependencies = [
 
 [project.optional-dependencies]
 test = [
-  "pytest == 7.1.3"
+    "pre-commit == 2.20.0",
+    "pytest == 7.1.3"
 ]
 
 [tool.setuptools.package-data]
