--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 x-http-proxy: &http-proxy ${HTTP_PROXY}
 x-https-proxy: &https-proxy ${HTTPS_PROXY}
-x-no-proxy: &no-proxy localhost,127.0.0.1,uclvlddpragae07,uclvlddpragae08,api,web
+x-no-proxy: &no-proxy localhost,127.0.0.1,uclvlddpragae07,uclvlddpragae08,api,web,baserow
 
 x-proxy-common: &proxy-common
   HTTP_PROXY: *http-proxy
@@ -27,6 +27,9 @@ services:
       - ${API_PORT}:8000
     networks:
       - hyui
+    profiles:
+      - run
+
   web:
     build:
       dockerfile: docker/web/Dockerfile
@@ -41,6 +44,37 @@ services:
       - api
     networks:
       - hyui
+    profiles:
+      - run
+
+  baserow:
+    image: baserow/baserow:1.13.1
+    environment:
+      <<: *proxy-common
+      DISABLE_VOLUME_CHECK: yes
+      BASEROW_PUBLIC_URL: "http://baserow:80"
+    env_file: .env
+    ports:
+      - ${BASEROW_PORT}:80
+    networks:
+      - hyui
+    profiles:
+      - run
+
+  initialise:
+    build:
+      dockerfile: docker/initialise/Dockerfile
+      args:
+        <<: *build-args-common
+    environment:
+      <<: *proxy-common
+    env_file: .env
+    depends_on:
+      - baserow
+    networks:
+      - hyui
+    profiles:
+      - initialise
 
 networks:
   hyui:
