--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -15,12 +15,13 @@ dependencies = [
     "Flask-Login == 0.6.2",
     "gunicorn == 20.1.0",
     "pandas == 1.5.1",
-    "pre-commit == 2.20.0",
+    "pydantic == 1.10.2",
     "requests == 2.28.1"
 ]
 
 [project.optional-dependencies]
 test = [
+    "pre-commit == 2.20.0",
     "pytest == 7.1.3",
     "types-requests == 2.28.11.2"
 ]
