--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi[all] == 0.85.0",
     "pandas == 1.5.1",
     "pre-commit == 2.20.0",
+    "pyodbc == 4.0.35",
     "psycopg2-binary == 2.9.5",
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
