--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Test with pytest
         working-directory: ./
         # Ideally we should not need all the environment variables to test.
-        run: pytest
+        run: pytest -m "not live"
