setup for running pytest in live environment
force pytest installation
notes on debugging live from the GAE
distinguish tests for the live environment
filter live tests out of CI

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -30,3 +30,7 @@ minversion = "7.1.3"
 testpaths = [
     "src/api/tests"
 ]
+markers = [
+    "smoke: subset of tests",
+    "live: tests that should only run in the live environment"
+]
