Add initialise script

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,10 @@ WEB_API_URL=
 # Mock config
 WEB_API_URL=http://localhost:8200/mock
 
-# Initialisation Configuration
-INIT_BASEROW_USERNAME=hyui
-INIT_BASEROW_EMAIL=hyui@nhs.net
-INIT_BASEROW_PASSWORD=
+# Baserow Configuration
+BASEROW_USERNAME=hyui
+BASEROW_EMAIL=hyui@nhs.net
+BASEROW_PASSWORD=
+BASEROW_BASE_URL=
+BASEROW_PUBLIC_URL=
+BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal
