--- a/docker/initialise/Dockerfile
+++ b/docker/initialise/Dockerfile
@@ -2,7 +2,6 @@ FROM python:3.11.0
 
 SHELL ["/bin/bash", "-o", "pipefail", "-e", "-u", "-x", "-c"]
 
-ARG HYLODE_UID
 
 # MS SQL Server requirements
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
@@ -16,10 +15,10 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 RUN  apt-get autoremove && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # User setup
-RUN useradd -u $HYLODE_UID -g 0 hyui
+RUN useradd -u 10000 -g 0 hyui
 
 RUN mkdir /app && \
-    chown -R $HYLODE_UID:0 /app
+    chown -R 10000:0 /app
 
 WORKDIR /app
 USER hyui
@@ -27,17 +26,13 @@ USER hyui
 # Allows us to install as a non-root user.
 ENV VIRTUAL_ENV=/app/venv
 RUN python3 -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH:/opt/mssql-tools/bin"
+ENV PATH="$VIRTUAL_ENV/bin:$PATH:/opt/mssql-tools18/bin"
 
 RUN pip install --no-cache-dir -U pip
-
-COPY --chown=hyui:root ./models/pyproject.toml /app/models/
-RUN pip install --no-cache-dir /app/models
 
 COPY --chown=hyui:root ./initialise/pyproject.toml /app/initialise/
 RUN pip install --no-cache-dir /app/initialise
 
-COPY --chown=hyui:root ./models/src/models /app/models
 COPY --chown=hyui:root ./initialise/src/initialise /app/initialise
 
 ENTRYPOINT ["python", "-m", "initialise.main"]
