--- a/initialise/pyproject.toml
+++ b/initialise/pyproject.toml
@@ -7,6 +7,9 @@ name = "hyui-initialise"
 version = "0.0.1"
 dependencies = [
     "email-validator == 1.3.0",
+    "pandas == 1.5.1",
+    "psycopg2-binary == 2.9.5",
     "pydantic == 1.10.2",
+    "SQLAlchemy == 1.4.41",
     "requests == 2.28.1"
 ]
