--- a/initialise/pyproject.toml
+++ b/initialise/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pandas == 1.5.1",
     "psycopg2-binary == 2.9.5",
     "pydantic == 1.10.2",
+    "pyodbc == 4.0.35",
     "SQLAlchemy == 1.4.41",
     "requests == 2.28.1"
 ]
