--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,7 @@
 python_version = 3.11
 warn_return_any = True
 warn_unused_configs = True
-disallow_untyped_defs = True
+disallow_untyped_defs = False
 
 # Per-module options:
 
