--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pydantic == 1.10.2",
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
-    "uvicorn[standard] == 0.18.3"
+    "uvicorn[standard] == 0.18.3",
 ]
 
 [project.optional-dependencies]
