--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ WEB_PORT=
 BASEROW_PORT=
 
 # API Server Configuration
-API_STAR_DSN=
-API_CABOODLE_DSN=
-API_CLARITY_DSN=
+API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
+API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
+API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 
 API_BASEROW_URL=
 API_BASEROW_READ_WRITE_TOKEN=
