--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ WEB_SECRET_KEY=
 WEB_API_URL=
 
 # Live config
-# WEB_API_URL=http://api:8000
+# WEB_API_URL=http://varnish:6081
 
 # Mock config
-WEB_API_URL=http://localhost:8200/mock
+WEB_API_URL=http://varnish:6081/mock
