--- a/.gitignore
+++ b/.gitignore
@@ -925,5 +925,5 @@ docs/_linkcheck/
 src/api/perrt/admission_probability/generated_data
 
 
-# odor dashboard
-web/src/web/assets/odor_dashboard.html
+# pete odor's PACU dashboard
+web/src/web/assets/pacu_dashboard.html
