--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,13 @@
 HYLODE_UID=
 API_PORT=
 WEB_PORT=
+BASEROW_PORT=
 CACHE_PORT=
 
 # API Server Configuration
-API_STAR_DSN=
-API_CABOODLE_DSN=
-API_CLARITY_DSN=
+API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
+API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
+API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 
 API_BASEROW_URL=
 API_BASEROW_READ_WRITE_TOKEN=
@@ -31,4 +32,11 @@ WEB_API_URL=
 # WEB_API_URL=http://varnish:6081
 
 # Mock config
-WEB_API_URL=http://varnish:6081/mock
+#WEB_API_URL=http://localhost:8200/mock
+
+# Baserow Configuration
+BASEROW_USERNAME=hyui
+BASEROW_EMAIL=hyui@nhs.net
+BASEROW_PASSWORD=
+BASEROW_PUBLIC_URL=
+BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal
