Change cache service name

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ WEB_SECRET_KEY=
 WEB_API_URL=
 
 # Live config
-# WEB_API_URL=http://varnish:6081
+# WEB_API_URL=http://cache:6081
 
 # Mock config
 #WEB_API_URL=http://localhost:8200/mock
