--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "hyui-models",
     "dash[diskcache] == 2.6.2",
     "dash-bootstrap-components == 1.2.1",
+    "dash-cytoscape == 0.3.0",
     "dash-daq == 0.5.0",
     "Flask == 2.2.2",
     "Flask-Caching == 2.0.1",
