--- a/initialise/pyproject.toml
+++ b/initialise/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "hyui-initialise"
 version = "0.0.1"
 dependencies = [
+    "hyui-models",
     "email-validator == 1.3.0",
     "pandas == 1.5.1",
     "psycopg2-binary == 2.9.5",
