--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_rep
 API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 
 API_BASEROW_URL=
-API_BASEROW_READ_WRITE_TOKEN=
-API_BASEROW_BEDS_TABLE_ID=
+API_BASEROW_EMAIL=hyui@nhs.net
+API_BASEROW_PASSWORD=
 
 API_HYCASTLE_URL=
 API_HYMIND_URL=
@@ -29,14 +29,11 @@ WEB_SECRET_KEY=
 WEB_API_URL=
 
 # Live config
-# WEB_API_URL=http://varnish:6081
+# WEB_API_URL=http://cache:6081
 
 # Mock config
 #WEB_API_URL=http://localhost:8200/mock
 
 # Baserow Configuration
-BASEROW_USERNAME=hyui
-BASEROW_EMAIL=hyui@nhs.net
-BASEROW_PASSWORD=
 BASEROW_PUBLIC_URL=
-BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal
+BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
