password protection; freshen landing page

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -53,8 +53,6 @@ website:
 
 format:
   html:
-    theme:
-      light: flatly
-      dark: darkly
+    theme: cosmo
     css: styles.css
     toc: true
