Update cache port and vcl file to bump default TTL to 5mins

--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,10 @@ WEB_SECRET_KEY=
 WEB_API_URL=
 
 # Live config
-# WEB_API_URL=http://cache:6081
+# WEB_API_URL=http://cache:8000
 
 # Mock config
-#WEB_API_URL=http://localhost:8200/mock
+#WEB_API_URL=http://cache:8000/mock
 
 # Baserow Configuration
 BASEROW_PUBLIC_URL=
