added settings (baserow) link

--- a/.env.example
+++ b/.env.example
@@ -36,4 +36,5 @@ WEB_API_URL=
 
 # Baserow Configuration
 BASEROW_PUBLIC_URL=
+WEB_BASEROW_PUBLIC_URL=
 BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
