--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_repor
 API_BASEROW_URL=
 API_BASEROW_EMAIL=hyui@nhs.net
 API_BASEROW_PASSWORD=
+# Will need to be regenerated if the application is recreated
+API_BASEROW_READ_WRITE_TOKEN=
+# TODO: create these dynamically from user auth when settings is instantiated
+API_BASEROW_APPLICATION_ID=16
 
 API_HYCASTLE_URL=
 API_HYMIND_URL=
