use database tokens over admin tokens
also added timers and more

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,14 @@ API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
 API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 
+# ===
+
+# Baserow config for the API docker image
 API_BASEROW_URL=
-API_BASEROW_EMAIL=hyui@nhs.net
+API_BASEROW_EMAIL=
 API_BASEROW_PASSWORD=
+API_BASEROW_APPLICATION_NAME=hyui
+API_BASEROW_USERNAME=hyui
 
 # Original hycastle and hymind on GAE07 5006/5007 respectively
 # Current hycastle and hymind on GAE08 5207/5208 respectively
@@ -28,21 +33,24 @@ API_ECHO_SQL=False
 WEB_USERNAME=
 WEB_PASSWORD=
 WEB_SECRET_KEY=
-WEB_API_URL=
 WEB_BASEROW_PUBLIC_URL=
+# live config
+# WEB_API_URL=http://api:8200
+# WEB_API_URL=http://cache:8200
 
-# Live config
-# WEB_API_URL=http://cache:8000
+# mock config
+# remove the mock prefix to run this live
+#WEB_API_URL=http://cache:8200/mock
+WEB_API_URL=http://localhost:8200/mock
 
-# Mock config
-#WEB_API_URL=http://cache:8000/mock
-
-# Baserow Configuration
-BASEROW_PUBLIC_URL=
-BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
+# Baserow Configuration for the initialise service
 BASEROW_EMAIL=
-BASEROW_USERNAME=
 BASEROW_PASSWORD=
+BASEROW_USERNAME=
+BASEROW_APPLICATION_NAME=hyui
+BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
+#BASEROW_PUBLIC_URL=https://api.baserow.io
+BASEROW_PUBLIC_URL=http://localhost:80
 # Baserow config for building defaults
 DB_STAR_DSN=
 DB_CABOODLE_DSN=
