--- a/initialise/pyproject.toml
+++ b/initialise/pyproject.toml
@@ -15,8 +15,15 @@ dependencies = [
     "SQLAlchemy == 1.4.41",
     "requests == 2.28.1"
 ]
+
 [project.optional-dependencies]
 test = [
     "pre-commit == 2.20.0",
     "pytest == 7.1.3"
+]
+
+[tool.pytest.ini_options]
+minversion = "7.1.3"
+testpaths = [
+    "src/initialise/tests"
 ]
