Adding varnish nuke healthcheck to docker compose

--- a/compose.yml
+++ b/compose.yml
@@ -40,6 +40,13 @@ services:
       - ${WEB_PORT}:8000
     depends_on:
       - api
+      - cache
+    healthcheck:
+      test: ["CMD", "./refresh_cache.sh"]
+      interval: 5m30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
     networks:
       - hyui
 
@@ -52,11 +59,10 @@ services:
       <<: *proxy-common
     env_file: .env
     ports:
-      - "${CACHE_PORT}:6081"
+      - "${CACHE_PORT}:8000"
     command: "-p default_keep=300"
     depends_on:
       - api
-      - web
     networks:
       - hyui
 
