as per comments for #194

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ WEB_USERNAME=
 WEB_PASSWORD=
 WEB_SECRET_KEY=
 WEB_API_URL=
+WEB_BASEROW_PUBLIC_URL=
 
 # Live config
 # WEB_API_URL=http://cache:6081
@@ -36,5 +37,10 @@ WEB_API_URL=
 
 # Baserow Configuration
 BASEROW_PUBLIC_URL=
-WEB_BASEROW_PUBLIC_URL=
 BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
+BASEROW_EMAIL=
+BASEROW_USERNAME=
+BASEROW_PASSWORD=
+# Baserow config for building defaults
+DB_STAR_DSN=
+DB_CABOODLE_DSN=
