tidied sitrep and hymind routes

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ API_BASEROW_URL=
 API_BASEROW_EMAIL=hyui@nhs.net
 API_BASEROW_PASSWORD=
 
+# Original hycastle and hymind on GAE07 5006/5007 respectively
+# Current hycastle and hymind on GAE08 5207/5208 respectively
 API_HYCASTLE_URL=
 API_HYMIND_URL=
 API_TOWERMAIL_URL=
