--- a/.gitignore
+++ b/.gitignore
@@ -474,7 +474,7 @@ tags
 
 ### VisualStudioCode ###
 .vscode/*
-*\.vscode*
+*/.vscode/*
 #!.vscode/tasks.json
 #!.vscode/launch.json
 *.code-workspace
