--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "SQLAlchemy == 1.4.41",
     "sqlmodel == 0.0.8",
     "uvicorn[standard] == 0.18.3",
+    "scikit-learn == 1.1.3",
+    "imbalanced-learn == 0.10.1",
+    "category-encoders == 2.6.0"
 ]
 
 [project.optional-dependencies]
