turned off predictions for mock

--- a/.gitignore
+++ b/.gitignore
@@ -928,3 +928,6 @@ src/api/perrt/admission_probability/generated_data
 
 # local jupyter lab for exploratory work
 jupyter/
+
+
+api/src/api/electives/deploy/*
