--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - main
-      - dev
+    #  - dev
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
