--- a/.gitignore
+++ b/.gitignore
@@ -929,5 +929,8 @@ src/api/perrt/admission_probability/generated_data
 # local jupyter lab for exploratory work
 jupyter/
 
-
+#electives models - temporary workaround before mlflow
 api/src/api/electives/deploy/*
+
+#PQIP dashboard
+web/src/web/assets/pqip_dashboard.html
