updated example .env

--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,55 @@
 # All variables are mandatory
 
 # Docker Configuration
-HYLODE_UID=
-API_PORT=
-WEB_PORT=
-BASEROW_PORT=
-CACHE_PORT=
+HYLODE_UID=501
+# Ports exposed externally
+WEB_PORT=8000
+API_PORT=8301
+BASEROW_PORT=8302
+CACHE_PORT=8303
 
 # API Server Configuration
 API_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
 API_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 API_CLARITY_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/clarity_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
 
-API_BASEROW_URL=
+API_BASEROW_URL=http://localhost
 API_BASEROW_EMAIL=hyui@nhs.net
-API_BASEROW_PASSWORD=
+API_BASEROW_PASSWORD=hylode22
+API_BASEROW_APPLICATION_NAME=hyui
+API_BASEROW_USERNAME=steve
 
-# Original hycastle and hymind on GAE07 5006/5007 respectively
-# Current hycastle and hymind on GAE08 5207/5208 respectively
-API_HYCASTLE_URL=
-API_HYMIND_URL=
-API_TOWERMAIL_URL=
-
-API_ECHO_SQL=False
+API_HYCASTLE_URL=http://uclvlddpragae07:5006
+API_HYMIND_URL=http://uclvlddpragae07:5007
+API_TOWERMAIL_URL=http://uclvlddpragae07:5032
 
 # Web Server Configuration
-WEB_USERNAME=
-WEB_PASSWORD=
-WEB_SECRET_KEY=
-WEB_API_URL=
-WEB_BASEROW_PUBLIC_URL=
+WEB_USERNAME=hyui
+WEB_PASSWORD=hyui
+WEB_SECRET_KEY=hyuisecretkey
+WEB_BASEROW_PUBLIC_URL=http://localhost:80
+# Used for interacting with the cache (e.g. refresh etc)
+WEB_CACHE_URL=http://cache:8000
 
-# Live config
+# Ports from docker compose)
+# Live config with cache
 # WEB_API_URL=http://cache:8000
 
+# Live config without cache
+#WEB_API_URL=http://api:8000
+
 # Mock config
-#WEB_API_URL=http://cache:8000/mock
+WEB_API_URL=http://localhost:8301/mock
 
 # Baserow Configuration
-BASEROW_PUBLIC_URL=
+BASEROW_APPLICATION_NAME=hyui
+BASEROW_USERNAME=hylode
 BASEROW_EXTRA_ALLOWED_HOSTS=host.docker.internal,baserow
-BASEROW_EMAIL=
-BASEROW_USERNAME=
-BASEROW_PASSWORD=
+#BASEROW_PUBLIC_URL=https://api.baserow.io
+BASEROW_PUBLIC_URL=http://localhost:80
+
+BASEROW_EMAIL=hyui@nhs.net
+BASEROW_PASSWORD=hylode22
 # Baserow config for building defaults
-DB_STAR_DSN=
-DB_CABOODLE_DSN=
+DB_STAR_DSN=postgresql+psycopg2://[username]:[password]@[host]:[port]/uds
+DB_CABOODLE_DSN=mssql+pyodbc://[username]:[password]@[host]:[port]/caboodle_report?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
