--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "scikit-learn == 1.1.3",
     "imbalanced-learn == 0.10.1",
     "category-encoders == 2.6.0",
-    "mlflow == 1.26.1"
+    "xgboost == 1.7.0"
 ]
 
 [project.optional-dependencies]
