--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "scikit-learn == 1.1.3",
     "imbalanced-learn == 0.10.1",
     "category-encoders == 2.6.0",
+    "sympy == 1.11.1",
     "xgboost == 1.7.2"
 ]
 
