logging with slack notifications

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ API_BASEROW_PASSWORD=
 API_HYCASTLE_URL=
 API_HYMIND_URL=
 API_TOWERMAIL_URL=
+# Hylode-Bot : slack API hook
+API_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
 API_ECHO_SQL=False
 
@@ -30,6 +32,8 @@ WEB_PASSWORD=
 WEB_SECRET_KEY=
 WEB_API_URL=
 WEB_BASEROW_PUBLIC_URL=
+# Hylode-Bot : slack web hook
+WEB_SLACK_LOG_WEBHOOK=https://hooks.slack.com/services/foo/bar/baz
 
 # Live config
 # WEB_API_URL=http://cache:8000
