--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,6 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "hyui-api"
 version = "0.0.1"
 dependencies = [
+    "loguru == 0.6.0",
+    "notifiers == 1.3.3",
     "hyui-models",
     "arrow == 1.2.3",
     "fastapi[all] == 0.85.0",
