--- a/web/pyproject.toml
+++ b/web/pyproject.toml
@@ -6,6 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "hyui-web"
 version = "0.0.1"
 dependencies = [
+    "loguru == 0.6.0",
+    "notifiers == 1.3.3",
     "hyui-models",
     "dash[diskcache] == 2.7.1",
     "dash-bootstrap-components == 1.2.1",
